[package]
name = "x25519-wasm-vn"
description = "WASM x25519"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
lto = true

[dependencies]
wasm-bindgen = "0.2"
# getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }
getrandom = { version = "0.2", default-features = false, features = ["js"] }
x25519-dalek = { version = "2", default-features = false, features = [
    "getrandom",
    "static_secrets",
] }
