[package]
name = "x25519-wasm-vn"
description = "WASM x25519"
version = "1.3.1"
edition = "2024"
repository = "https://github.com/ndtao2020/x25519-wasm-vn"
authors = ["Nguyen Dinh Tao <ndtao2020@gmail.com>"]
license = "MIT License"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true

[dependencies]
alloc_cat = "1"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", default-features = false, features = ["js"] }
x25519-dalek = { version = "2", default-features = false, features = [
    "getrandom",
    "static_secrets",
] }
